Grace/tests/gibbs/errors/t252.grace
// ERROR = P1001
if(false) then {
}
else {
